--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -1,3 +1,10 @@
-<p>
-  note works!
-</p>
+<ion-card>
+  <ion-card-header>
+    <ion-card-title>{{ note.name }}</ion-card-title>
+    <ion-card-subtitle>{{ note.importance }}</ion-card-subtitle>
+  </ion-card-header>
+
+  <ion-card-content>
+    {{ note.details }}
+  </ion-card-content>
+</ion-card>
