--- a/src/app/pages/notes/notes.page.html
+++ b/src/app/pages/notes/notes.page.html
@@ -5,9 +5,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">notes</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div *ngFor="let note of notes">
+    <app-note [note]="note"></app-note>
+  </div>
 </ion-content>
