--- a/src/app/pages/add-goal/add-goal.page.html
+++ b/src/app/pages/add-goal/add-goal.page.html
@@ -72,6 +72,7 @@
       color="dark"
       expand="block"
       fill="clear"
+      [disabled]="goalForm.invalid"
       >Add Goal</ion-button
     >
 
