--- a/src/app/pages/add-todo/add-todo.page.html
+++ b/src/app/pages/add-todo/add-todo.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>New Goal</ion-title>
+    <ion-title>New Todo</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -72,6 +72,7 @@
       color="dark"
       expand="block"
       fill="clear"
+      [disabled]="todoForm.invalid"
       >Add Todo</ion-button
     >
 
