add note works now

--- a/src/app/pages/add-goal/add-goal.page.html
+++ b/src/app/pages/add-goal/add-goal.page.html
@@ -73,7 +73,7 @@
       expand="block"
       fill="clear"
       [disabled]="goalForm.invalid"
-      >Add Goal</ion-button
+      >Add Note</ion-button
     >
 
     <ion-toast
