--- a/src/app/pages/add-note/add-note.page.html
+++ b/src/app/pages/add-note/add-note.page.html
@@ -5,9 +5,56 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">add-note</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <form [formGroup]="noteForm">
+    <ion-list>
+      <ion-item>
+        <ion-input
+          formControlName="name"
+          label="Title"
+          labelPlacement="floating"
+          placeholder="Enter title"
+          type="text"
+        ></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-textarea
+          formControlName="details"
+          label="Details"
+          labelPlacement="floating"
+          placeholder="Enter details"
+          type="text"
+        ></ion-textarea>
+      </ion-item>
+
+      <ion-item>
+        <ion-select
+          aria-label="Importance"
+          interface="popover"
+          placeholder="Select importance"
+          formControlName="importance"
+        >
+          <ion-select-option value="low">Low</ion-select-option>
+          <ion-select-option value="medium">Medium</ion-select-option>
+          <ion-select-option value="high">High</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-list>
+
+    <ion-button
+      (click)="onSubmit()"
+      id="submit-button"
+      color="dark"
+      expand="block"
+      fill="clear"
+      [disabled]="noteForm.invalid"
+      >Add Goal</ion-button
+    >
+
+    <ion-toast
+      trigger="submit-button"
+      message="Goal added succussfully!"
+      [duration]="2500"
+    ></ion-toast>
+  </form>
 </ion-content>
