--- a/src/app/pages/achievements/achievements.page.html
+++ b/src/app/pages/achievements/achievements.page.html
@@ -5,9 +5,39 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">achievements</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Be Proud of Yourself</ion-card-title>
+      <ion-card-subtitle>All those Todos!</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label *ngFor="let todo of achievedTodos">
+            <h2>{{ todo.name }}</h2>
+            <p>{{ todo.start_date | date }} - {{ todo.end_date | date }}</p>
+            <p>{{ todo.description }}</p>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Look at You Go</ion-card-title>
+      <ion-card-subtitle>And those Goals!</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label *ngFor="let goal of achievedGoals">
+            <h2>{{ goal.name }}</h2>
+            <p>{{ goal.start_date | date }} - {{ goal.end_date | date }}</p>
+            <p>{{ goal.description }}</p>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
