--- a/src/app/pages/todos/todos.page.html
+++ b/src/app/pages/todos/todos.page.html
@@ -6,6 +6,6 @@
 
 <ion-content [fullscreen]="true">
   <ion-list *ngFor="let todo of todos">
-    <app-todo [todo]="todo"></app-todo>
+    <app-todo [todo]="todo" (checkedEvent)="onChecked($event)"></app-todo>
   </ion-list>
 </ion-content>
