items now disappear from page when checked

--- a/src/app/pages/goals/goals.page.html
+++ b/src/app/pages/goals/goals.page.html
@@ -6,6 +6,6 @@
 
 <ion-content [fullscreen]="true">
   <ion-list *ngFor="let goal of goals">
-    <app-goal [goal]="goal"></app-goal>
+    <app-goal [goal]="goal" (checkedEvent)="onChecked($event)"></app-goal>
   </ion-list>
 </ion-content>
