--- a/src/app/pages/achievements/achievements.page.html
+++ b/src/app/pages/achievements/achievements.page.html
@@ -18,6 +18,12 @@
             <p>{{ todo.start_date | date }} - {{ todo.end_date | date }}</p>
             <p>{{ todo.description }}</p>
           </ion-label>
+          <ion-button fill="clear"
+            ><ion-icon name="pencil-outline"></ion-icon
+          ></ion-button>
+          <ion-button fill="clear"
+            ><ion-icon name="trash-outline"></ion-icon
+          ></ion-button>
         </ion-item>
       </ion-list>
     </ion-card-content>
@@ -36,6 +42,12 @@
             <p>{{ goal.start_date | date }} - {{ goal.end_date | date }}</p>
             <p>{{ goal.description }}</p>
           </ion-label>
+          <ion-button fill="clear"
+            ><ion-icon name="pencil-outline"></ion-icon
+          ></ion-button>
+          <ion-button fill="clear"
+            ><ion-icon name="trash-outline"></ion-icon
+          ></ion-button>
         </ion-item>
       </ion-list>
     </ion-card-content>
