--- a/src/app/pages/add-note/add-note.page.html
+++ b/src/app/pages/add-note/add-note.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Add Note</ion-title>
+    <ion-title>New Note</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -48,12 +48,12 @@
       expand="block"
       fill="clear"
       [disabled]="noteForm.invalid"
-      >Add Goal</ion-button
+      >Add Note</ion-button
     >
 
     <ion-toast
       trigger="submit-button"
-      message="Goal added succussfully!"
+      message="Note added succussfully!"
       [duration]="2500"
     ></ion-toast>
   </form>
