--- a/src/app/pages/notes/notes.page.html
+++ b/src/app/pages/notes/notes.page.html
@@ -8,4 +8,10 @@
   <div *ngFor="let note of notes">
     <app-note [note]="note"></app-note>
   </div>
+
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+    <ion-fab-button routerDirection="forward" [routerLink]="['/add-note']">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
