--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -7,4 +7,7 @@
   <ion-card-content>
     {{ note.details }}
   </ion-card-content>
+
+  <ion-button fill="clear">Edit</ion-button>
+  <ion-button fill="clear" (click)="onNoteDelete(note.id)">Delete</ion-button>
 </ion-card>
