--- a/src/global.scss
+++ b/src/global.scss
@@ -27,17 +27,13 @@
 
 /* Ion fab button style */
 ion-fab-button::part(native) {
-  background-color: var(--ion-color-tertiary-tint);
+  background-color: var(--ion-color-primary-tint);
 
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3),
     0px 1px 3px 1px rgba(0, 0, 0, 0.15);
-  color: var(--ion-color-tertiary-contrast);
+  color: var(--ion-color-primary-contrast);
 }
 
 ion-fab-button::part(native):hover::after {
-  background-color: var(--ion-color-tertiary);
-}
-
-ion-fab-button::part(native):active::after {
-  background-color: var(--ion-color-tertiary-shade);
+  background-color: var(--ion-color-primary);
 }
