added menu toggle button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
+          <ion-list-header>My Planner</ion-list-header>
+          <ion-note>you won't miss a To Do again!</ion-note>
 
           <ion-menu-toggle
             auto-hide="false"
@@ -28,7 +28,7 @@
           </ion-menu-toggle>
         </ion-list>
         <ion-list id="labels-list">
-          <ion-list-header>Inbox</ion-list-header>
+          <ion-list-header>Start Here</ion-list-header>
 
           <ion-menu-toggle
             auto-hide="false"
