--- a/src/app/pages/video-diary/video-diary.page.html
+++ b/src/app/pages/video-diary/video-diary.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Video Diary</ion-title>
   </ion-toolbar>
 </ion-header>
