--- a/src/app/components/goal/goal.component.html
+++ b/src/app/components/goal/goal.component.html
@@ -1,4 +1,8 @@
-<ion-checkbox labelPlacement="end" (ionChange)="onChecked($event)">
+<ion-checkbox
+  labelPlacement="end"
+  (ionChange)="onChecked($event)"
+  (ionChange)="presentAlert($event)"
+>
   <ion-item
     ><ion-label>
       <h2>{{ goal.name }}</h2>
