added ionic alert and toast for delete

--- a/src/global.scss
+++ b/src/global.scss
@@ -37,3 +37,7 @@ ion-fab-button::part(native) {
 ion-fab-button::part(native):hover::after {
   background-color: var(--ion-color-primary);
 }
+
+ion-menu-button {
+  color: var(--ion-color-primary);
+}
