added ion badge but noo code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
                 [md]="p.icon + '-sharp'"
               ></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
-              <!-- <ion-badge [color]="p.color">{{ p.count }}</ion-badge> -->
+              <ion-badge [color]="p.color">{{ p.count }}</ion-badge>
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
